--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <title>Brackapptology</title>
   <link rel="stylesheet" href="/style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <script defer src="/bundle.js"></script>
 </head>
 
